package com.kabao.chat.proto;


message SendMessageRequest {
    enum MsgType{
        TEXT_MESSAGE                        = 0;
        IMAGE_MESSAGE                       = 1;
        AUDIO_MESSAGE                       = 2;
        VIDEO_MESSAGE                       = 3;
        EXPRESSION_MESSAGE                  = 4;
        POSITION_MESSAGE                    = 5;
        SYSTEM_MESSAGE                      = 6;
        NULL_MESSAGE                        = 7;
        TRANSFER_COLLECTION_MESSAGE         = 8;
    }
    required int64 destid   = 1;
    required int64 srcid    = 2;
    optional int64 groupid  = 3;
    optional int64 recvtime = 4;
    required int32 msgtype = 5;
    required string msg = 6;
}


message SendMessageResponse {

    enum Error {
        ERR_OK = 0;
        ERR_SYS = -1;
    }

    required int32 status = 1;
    required int64 recvtime = 2;
    required uint32 sequence = 3;
}